--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,10 +1,10 @@
 /******************************************************************
-	
+
 Stylesheet: Main Stylesheet
 
 Here's where the magic happens. Here is where you import
 all of your Sass files so they can compile into one
-CSS file. 
+CSS file.
 
 ******************************************************************/
 
@@ -18,9 +18,9 @@ CSS file.
 @import "../../vendor/foundation-sites/scss/foundation";
 
 // Import Motion-UI from vendor files
-@import "../../vendor/motion-ui/src/motion-ui";
-@include motion-ui-transitions;
-@include motion-ui-animations;
+//@import "../../vendor/motion-ui/src/motion-ui";
+//@include motion-ui-transitions;
+//@include motion-ui-animations;
 
 // Select the components you want to use
   @include foundation-global-styles;
@@ -30,38 +30,38 @@ CSS file.
   @include foundation-typography;
   @include foundation-forms;
   @include foundation-button;
-  @include foundation-accordion;
-  @include foundation-accordion-menu;
-  @include foundation-badge;
-  @include foundation-breadcrumbs;
-  @include foundation-button-group;
-  @include foundation-callout;
-  @include foundation-card;
+  //@include foundation-accordion;
+  //@include foundation-accordion-menu;
+  //@include foundation-badge;
+  //@include foundation-breadcrumbs;
+  //@include foundation-button-group;
+  //@include foundation-callout;
+  //@include foundation-card;
   @include foundation-close-button;
   @include foundation-menu;
-  @include foundation-menu-icon;
-  @include foundation-drilldown-menu;
-  @include foundation-dropdown;
-  @include foundation-dropdown-menu;
-  @include foundation-responsive-embed;
-  @include foundation-label;
-  @include foundation-media-object;
-  @include foundation-off-canvas;
-  @include foundation-orbit;
-  @include foundation-pagination;
-  @include foundation-progress-bar;
-  @include foundation-slider;
+  //@include foundation-menu-icon;
+  //@include foundation-drilldown-menu;
+  //@include foundation-dropdown;
+  //@include foundation-dropdown-menu;
+  //@include foundation-responsive-embed;
+  //@include foundation-label;
+  //@include foundation-media-object;
+  //@include foundation-off-canvas;
+  //@include foundation-orbit;
+  //@include foundation-pagination;
+  //@include foundation-progress-bar;
+  //@include foundation-slider;
   @include foundation-sticky;
   @include foundation-reveal;
-  @include foundation-switch;
-  @include foundation-table;
-  @include foundation-tabs;
-  @include foundation-thumbnail;
-  @include foundation-title-bar;
-  @include foundation-tooltip;
+  //@include foundation-switch;
+  //@include foundation-table;
+  //@include foundation-tabs;
+  //@include foundation-thumbnail;
+  //@include foundation-title-bar;
+  //@include foundation-tooltip;
   @include foundation-top-bar;
   @include foundation-visibility-classes;
-  @include foundation-float-classes;
+  //@include foundation-float-classes;
 
 // Import your custom styles
 @import "main";
