--- a/assets/styles/scss/_settings.scss
+++ b/assets/styles/scss/_settings.scss
@@ -30,7 +30,7 @@
 //  25. Orbit
 //  26. Pagination
 //  27. Progress Bar
-//  28. Responsive Embed 
+//  28. Responsive Embed
 //  29. Reveal
 //  30. Slider
 //  31. Switch
@@ -618,7 +618,7 @@ $tooltip-radius: $global-radius;
 // -----------
 
 $topbar-padding: 0.5rem;
-$topbar-background: $light-gray;
+$topbar-background: #3c3c3c;
 $topbar-submenu-background: $topbar-background;
 $topbar-title-spacing: 0.45rem 1rem 0 1rem;
 $topbar-input-width: 200px;
