--- a/assets/styles/scss/_global.scss
+++ b/assets/styles/scss/_global.scss
@@ -35,6 +35,7 @@ body{
 	background-position: top center;
 	background-size: contain;
 }
+
 /*********************
 LINK STYLES
 *********************/
@@ -258,7 +259,9 @@ POSTS & CONTENT STYLES
 #production{
 	background: #d9d9d9;
 	.production-content{
-		    padding: 60px 40px 110px 0;
+    padding-top:60px;
+    padding-right : 40px;
+    padding-bottom:110px;
 
         .production_container{
           display: -ms-flex;
@@ -317,7 +320,8 @@ POSTS & CONTENT STYLES
 			width: 70%;
 			margin-left : auto;
       margin-right : auto;
-      margin-top: 50%;
+      position:relative;
+      top: 50%;
       transform: translateY(-50%);
 		}
 	}
@@ -334,6 +338,7 @@ POSTS & CONTENT STYLES
 		height: auto;
 		display: block;
 		margin: auto;
+    width: 100%;
 	}
 }
 
@@ -445,166 +450,6 @@ PAGE NAVI STYLES
 }
 
 /*********************
-COMMENT STYLES
-*********************/
-#comments {
-	.commentlist {
-		margin-left: 0px;
-	}
-}
-
-#respond {
-	ul {
-		margin-left: 0px;
-	}
-}
-
-.commentlist {
-	li {
-		position: relative;
-		clear: both;
-		overflow: hidden;
-		list-style-type: none;
-		margin-bottom: 1.5em;
-		padding: 0.7335em 10px;
-
-		&:last-child {
-			margin-bottom: 0;
-		}
-
-		ul.children {
-			margin: 0;
-
-			li {}
-
-			.comment {}
-			.alt {}
-			.odd {}
-			.even {}
-			.depth-1 {}           // Change number for different depth
-			.byuser {}
-			.bypostauthor {}
-			.comment-author-admin {}
-
-		}
-	}
-
-	li[class*=depth-] {
-		margin-top: 1.1em;
-	}
-
-	li.depth-1 {
-		margin-left: 0;
-		margin-top: 0;
-	}
-
-	li:not(.depth-1) {
-		margin-left: 10px;
-		margin-top: 0;
-		padding-bottom: 0;
-	}
-
-	li.depth-2 {}
-	li.depth-3 {
-	}
-	li.depth-4 {}
-	li.depth-5 {}
-
-	// General comment classes
-	.alt {}
-	.odd {
-	}
-	.even {
-	}
-	.parent {}
-	.comment {}
-	.children {}
-	.pingback {}
-	.bypostauthor {}
-	.comment-author {}
-	.comment-author-admin {}
-	.thread-alt {}
-	.thread-odd {}
-	.thread-even {}
-
-	// vcard
-	.vcard {
-		margin-left: 50px;
-
-		cite.fn {
-			font-weight: 700;
-			font-style: normal;
-
-			a.url {}
-
-		}
-
-		time {
-			float: right;
-
-			a {
-				color: #999;
-				text-decoration: none;
-
-				&:hover {
-					text-decoration: underline;
-				}
-
-			}
-
-		}
-
-		img.photo {}
-
-		img.avatar {
-			position: absolute;
-			left: 10px;
-			padding: 2px;
-			border: 1px solid #cecece;
-			background: #fff;
-		}
-
-	} // end .commentlist .vcard
-
-
-	// comment meta
-	.comment-meta {
-
-		a {}
-
-	}
-
-	.commentmetadata {
-
-		a {}
-
-	}
-
-	// comment content
-	.comment_content {
-
-		p {
-			margin: 0.7335em 0 1.5em;
-			font-size: 1em;
-			line-height: 1.5em;
-		}
-
-	} // end .commentlist .comment_content
-
-	// comment reply link
-	.comment-reply-link {
-		float: right;
-
-		&:hover,
-		&:focus {
-
-		}
-
-	} // end .commentlist .comment-reply-link
-
-} // end .commentlist
-
-/*********************
 COMMENT FORM STYLES
 *********************/
 .respond-form {
@@ -692,37 +537,7 @@ COMMENT FORM STYLES
 	margin: 0 20px 1.1em;
 }
 
-/*********************
-SIDEBARS & ASIDES
-*********************/
-.sidebar {
-}
 
-#searchsubmit {
-}
-
-.widgettitle {
-}
-
-.widget {
-	ul {
-		margin: 0;
-
-		li {
-			list-style: none;
-
-			&:first-child {}
-
-			&:last-child {}
-
-			a {}
-
-			// deep nesting
-			ul {}
-
-		}
-	}
-}
 /*********************
 FOOTER STYLES
 *********************/
@@ -776,4 +591,27 @@ PLUGIN STYLES
 .gform_body ul {
     list-style: none outside none;
     margin: 0;
+}
+@include breakpoint(medium only) {
+  .medium-0{
+    display:none;
+  }
+}
+@include breakpoint(small only) {
+  #histoire .chiffre_container{
+    display : block;
+    .chiffre-content{
+      margin-bottom: 30px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+  #batch{
+    .chiffre_container{
+      display: block;
+    }
+  }
+  .medium-0{
+    display:none;
+  }
 }
