--- a/assets/styles/scss/_settings.scss
+++ b/assets/styles/scss/_settings.scss
@@ -86,13 +86,13 @@ $print-transparent-backgrounds: true;
 
 $breakpoints: (
   small: 0,
-  medium: 640px,
+  medium: 782px,
   large: 1024px,
-  xlarge: 1200px,
+  xlarge: 1350px,
   xxlarge: 1440px,
 );
 $print-breakpoint: large;
-$breakpoint-classes: (small medium large);
+$breakpoint-classes: (small medium large xlarge);
 
 // 3. The Grid
 // -----------
@@ -119,7 +119,7 @@ $header-margin-bottom: 0.5rem;
 $header-styles: (
   small: (
     'h1': ('font-size': 45),
-    'h2': ('font-size': 23),
+    'h2': ('font-size': 20),
     'h3': ('font-size': 19),
     'h4': ('font-size': 18),
     'h5': ('font-size': 17),
@@ -127,7 +127,7 @@ $header-styles: (
   ),
   medium: (
     'h1': ('font-size': 45),
-    'h2': ('font-size': 23),
+    'h2': ('font-size': 22),
     'h3': ('font-size': 31),
     'h4': ('font-size': 25),
     'h5': ('font-size': 20),
