--- a/assets/styles/scss/_global.scss
+++ b/assets/styles/scss/_global.scss
@@ -33,7 +33,7 @@ body{
 	background-image: url(../images/background-header.png);
 	background-repeat: no-repeat;
 	background-position: top center;
-	background-size: contain;
+	background-size: 100% auto;
 }
 
 /*********************
@@ -122,7 +122,76 @@ NAVIGATION STYLES
 		z-index: 1;
 	}
 }
+.menu-mobile{
+  background-color: #3c3c3c;
+  display:inline-block;
+  padding:10px;
+  right: 0;
+  margin-top:0 !important;
+      width: initial !important;
+  img{
+    width: 34px;
+    height: auto;
+  }
+}
+.hide-mobile-menu{
+  display: none;
+}
+#ModalMenu{
 
+  z-index: 1;
+  position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.90);
+  .menu-mobile-container{
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .menu{
+    display: block;
+    text-align: center;
+    li{
+      display:block;
+      margin-bottom: 15px;
+      a{
+        font-size: 22px;
+        font-weight: bold;
+      }
+      .is-active{
+        &:after{
+          display: none;
+        }
+      }
+    }
+  }
+  .social{
+    text-align: center;
+    margin: auto;
+    display: block;
+    margin-top: 30px;
+    li{
+      img{
+        height: 20px;
+      }
+    }
+  }
+}
+.close-button{
+  right: 0;
+  top: 0;
+  font-size: initial;
+  .menu-exit{
+    background-color: #3c3c3c;
+    display:inline-block;
+    padding:10px;
+    img{
+      width: 34px;
+      height: auto;
+    }
+  }
+}
 
 	.menu{
 		margin-left: 0;
@@ -177,6 +246,7 @@ NAVIGATION STYLES
 POSTS & CONTENT STYLES
 *********************/
 #content {
+  z-index: 0;
 	#inner-content {
 		padding: 1rem 0rem;
 	}
@@ -186,12 +256,12 @@ POSTS & CONTENT STYLES
 	img{
 		display: block;
 		margin: auto;
-		    width: 60%;
+		    width: 35%;
 	}
 }
 #histoire{
 	background-repeat: no-repeat;
-	background-position: right top;
+	background-position: right bottom;
 	background-size:contain;
 	padding-bottom: 77px;
   padding-top: 90px;
@@ -370,7 +440,7 @@ POSTS & CONTENT STYLES
   }
 	.chiffre-content{
 		text-align: center;
-		padding: 65px 15px;
+		padding: 20px 15px 65px 15px;
     position:relative;
 
     &:after{
@@ -585,19 +655,57 @@ FOUNDATION STYLES
 *********************/
 
 /*********************
-PLUGIN STYLES
+RESPONSIVE
 *********************/
 // Makes Gravity Forms play nice with Foundation Form styles
 .gform_body ul {
     list-style: none outside none;
     margin: 0;
 }
+
 @include breakpoint(medium only) {
   .medium-0{
     display:none;
   }
+  #histoire{
+    background-size: auto;
+  }
+  #production .production_text_container .production_text{
+    font-size: 20px;
+  }
+  #batch{
+    .chiffre_container{
+      display: block;
+    }
+    .titre-small{
+      margin-bottom: 40px;
+    }
+  }
+  footer{
+    font-size: 16px;
+  }
+  .menu{
+    a{
+      padding : 0.7rem 0.4rem;
+    }
+  }
+  .social{
+    margin-right: 10px;
+  }
+  #normindia{
+  	img{
+  		    width: 70%;
+  	}
+  }
 }
 @include breakpoint(small only) {
+  body{
+    background-image: url(../images/background-header-mobile.png);
+    background-size: 100% auto;
+  }
+  #histoire{
+    background-size: auto;
+  }
   #histoire .chiffre_container{
     display : block;
     .chiffre-content{
@@ -613,5 +721,72 @@ PLUGIN STYLES
   }
   .medium-0{
     display:none;
+  }
+  #production{
+    .production-content{
+      padding-right: 0;
+      .production_container{
+        display: block;
+      }
+    }
+    .production_text_container{
+      height: auto !important;
+      padding: 40px 0;
+      .production_text{
+        top : 0;
+        transform: translateY(0);
+      }
+    }
+  }
+  #normindia{
+    img{
+          width: 80%;
+    }
+  }
+  footer{
+    text-align: center;
+  }
+  .footer-right{
+    margin-top: 40px;
+  }
+}
+@include breakpoint(800) {
+  body{
+    background-image: url(../images/background-header-small.png);
+    background-size: 123% auto;
+  }
+}
+@include breakpoint(900) {
+  body{
+    background-image: url(../images/background-header-small.png);
+    background-size: 108% auto;
+  }
+}
+@include breakpoint(1024) {
+  body{
+    background-image: url(../images/background-header.png);
+    background-size: 116% auto;
+  }
+}
+@include breakpoint(1200) {
+  body{
+    background-size: 108% auto;
+  }
+}
+@include breakpoint(1350) {
+  body{
+    background-size: 100% auto;
+  }
+}
+@include breakpoint(1500) {
+  body{
+    background-image: url(../images/background-header-large.png);
+    background-size: 100% auto;
+  }
+}
+@include breakpoint(1800) {
+  body{
+    background-image: url(../images/background-header-large2.png);
+    background-size: 100% auto;
   }
 }
