--- a/assets/styles/scss/_settings.scss
+++ b/assets/styles/scss/_settings.scss
@@ -86,7 +86,7 @@ $print-transparent-backgrounds: true;
 
 $breakpoints: (
   small: 0,
-  medium: 782px,
+  medium: 760px,
   large: 1024px,
   xlarge: 1350px,
   xxlarge: 1440px,
@@ -103,7 +103,7 @@ $grid-column-gutter: (
   small: 20px,
   medium: 30px,
 );
-$grid-column-align-edge: true;
+$grid-column-align-edge: false;
 $block-grid-max: 8;
 
 // 4. Base Typography
@@ -503,14 +503,14 @@ $responsive-embed-ratios: (
 // 29. Reveal
 // ----------
 
-$reveal-background: $white;
+$reveal-background: transparent;
 $reveal-width: 600px;
 $reveal-max-width: $global-width;
 $reveal-padding: $global-padding;
 $reveal-border: 1px solid $medium-gray;
 $reveal-radius: $global-radius;
 $reveal-zindex: 1005;
-$reveal-overlay-background: rgba($black, 0.45);
+$reveal-overlay-background: rgba($black, 0.90);
 
 // 30. Slider
 // ----------
