link visited white

--- a/assets/styles/scss/_global.scss
+++ b/assets/styles/scss/_global.scss
@@ -39,6 +39,9 @@ body{
 /*********************
 LINK STYLES
 *********************/
+a:visited{
+  color: white;
+}
 a, a:visited {
 
 	// Mobile tap color
